syntax = "proto3";

option csharp_namespace = "Discount.GRPC.Protos";

service CouponProtoService{
	rpc GetDiscount (GetDiscountRequest) returns (GetDiscountResponse);
	rpc GetRandomDiscount (GetRandomDiscountRequest) returns (GetRandomDiscountResponse);
}

message GetDiscountRequest{
	string productName = 1;
}

message GetDiscountResponse{
	int32 id = 1;
	string productName = 2;
	string productDescription = 3;
	int32 amount = 4;
}

message GetRandomDiscountRequest{
	int32 numOfRequests = 1;
}

message GetRandomDiscountResponse{
	message Coupon{
		int32 id = 1;
		string productName = 2;
		string productDescription = 3;
		int32 amount = 4;
	}
	repeated Coupon coupons = 1;
	int32 totalAmount = 2;
}